agrego logs a las llamadas a los repository