@@ -1,6 +1,6 @@
 package com.group_three.food_ordering.services.impl;
 
-import com.group_three.food_ordering.context.RequestContext;
+import com.group_three.food_ordering.context.TenantContext;
 import com.group_three.food_ordering.dto.SessionInfo;
 import com.group_three.food_ordering.dto.request.TableSessionRequestDto;
 import com.group_three.food_ordering.dto.response.AuthResponse;
@@ -30,7 +30,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.Instant;
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static com.group_three.food_ordering.utils.EntityName.PARTICIPANT;
 import static com.group_three.food_ordering.utils.EntityName.TABLE_SESSION;
@@ -44,7 +43,7 @@ public class TableSessionServiceImpl implements TableSessionService {
     private final TableSessionRepository tableSessionRepository;
     private final TableSessionMapper tableSessionMapper;
     private final ParticipantService participantService;
-    private final RequestContext requestContext;
+    private final TenantContext tenantContext;
     private final JwtService jwtService;
     private final DiningTableService diningTableService;
     private final ParticipantMapper participantMapper;
@@ -56,43 +55,39 @@ public class TableSessionServiceImpl implements TableSessionService {
     public AuthResponse enter(TableSessionRequestDto dto) {
         log.debug("[TableSession] Processing table session entry for tableId={}", dto.getTableId());
 
-        // 1) Mesa y venue (entrada siempre confiable, sin mutar "contextos" globales)
         DiningTable diningTable = diningTableService.getEntityById(dto.getTableId());
+        log.debug("[TableSession] DiningTable number={}", diningTable.getNumber());
         FoodVenue venue = diningTable.getFoodVenue();
 
-        // 2) Snapshot del estado actual del request
-        Optional<User> userOpt         = requestContext.userOpt();
-        Optional<Participant> partOpt  = requestContext.participantOpt();
-        Optional<RoleType> roleOpt     = requestContext.roleOpt();
-        Optional<TableSession> tsOpt   = requestContext.tableSessionOpt();
+        // Snapshot del estado actual del request
+        Optional<User> userOpt = tenantContext.userOpt();
+        Optional<Participant> partOpt = tenantContext.participantOpt();
+        Optional<RoleType> roleOpt = tenantContext.roleOpt();
+        Optional<TableSession> tsOpt = tenantContext.tableSessionOpt();
 
-        // 3) Idempotencia: si es CLIENTE con sesión activa en su token → devolver esa sesión
+        // CLIENTE con sesión activa en su token → devolver esa sesión
         if (roleOpt.map(r -> r == RoleType.ROLE_CLIENT).orElse(false)
                 && tsOpt.isPresent()
                 && tsOpt.get().getEndTime() == null) {
             log.debug("[TableSession] Idempotent enter: existing active session {}", tsOpt.get().getPublicId());
-            return signForParticipant(tsOpt.get(), Objects.requireNonNull(findOrCreateParticipantForUser(tsOpt.get(), userOpt.orElse(null))));
+            return signForParticipant(tsOpt.get(),
+                    Objects.requireNonNull(findOrCreateParticipantForUser(tsOpt.get(), userOpt.orElse(null))));
         }
 
-        // 4) Buscar si la mesa ya tiene sesión activa
-        TableSession activeForTable = tableSessionRepository
-                .findTableSessionByDiningTable_PublicIdAndDiningTableStatusAndEndTimeIsNull(
-                        diningTable.getPublicId(), DiningTableStatus.IN_SESSION)
-                .orElse(null);
+        // Buscar si la mesa ya tiene sesión activa
+        Optional<TableSession> activeForTableOpt = getTableSessionActiveByTable(diningTable.getPublicId());
 
-        // 5) CLIENTE: priorizar una sesión activa propia; si no, unirse/crear en esta mesa
+        // CLIENTE: priorizar su sesión activa; si no, unirse/crear en esta mesa
         if (roleOpt.map(r -> r == RoleType.ROLE_CLIENT).orElse(false) && userOpt.isPresent()) {
             User user = userOpt.get();
 
-            // 5a) ¿Usuario ya tiene sesión activa (aunque su token no la traiga)?
             TableSession userActive = findActiveSessionForUser(user);
             if (userActive != null) {
-                log.debug("[TableSession] User {} already has an active session {}", user.getEmail(), userActive.getPublicId());
                 return signForParticipant(userActive, findOrCreateParticipantForUser(userActive, user));
             }
 
-            // 5b) Vincular al cliente a la sesión de la mesa (reusar o crear)
-            TableSession ts = (activeForTable != null) ? activeForTable : createNewSession(diningTable, venue);
+            // Vincular al cliente a la sesión de la mesa (reusar o crear)
+            TableSession ts = activeForTableOpt.orElseGet(() -> createNewSession(diningTable, venue));
             Participant client = findOrCreateParticipantForUser(ts, user);
 
             // Si venía con participant guest de ESTA sesión, migrar órdenes y remover guest
@@ -104,7 +99,7 @@ public class TableSessionServiceImpl implements TableSessionService {
         }
 
         // 6) Invitado o anónimo → reusar/crear sesión y participant guest
-        TableSession ts = (activeForTable != null) ? activeForTable : createNewSession(diningTable, venue);
+        TableSession ts = activeForTableOpt.orElseGet(() -> createNewSession(diningTable, venue));
         Participant guest = findOrCreateGuestParticipant(ts, partOpt.orElse(null));
         return signForParticipant(ts, guest);
     }
@@ -114,7 +109,8 @@ public class TableSessionServiceImpl implements TableSessionService {
     // ===========================
     @Override
     public Page<TableSessionResponseDto> getAll(Pageable pageable) {
-        UUID foodVenueId = requestContext.requireFoodVenue().getPublicId();
+        UUID foodVenueId = tenantContext.requireFoodVenue().getPublicId();
+        log.debug("[TableSessionRepository] Calling findByFoodVenuePublicId for venueId={}", foodVenueId);
         return tableSessionRepository.findByFoodVenuePublicId(foodVenueId, pageable)
                 .map(tableSessionMapper::toDto);
     }
@@ -126,7 +122,8 @@ public class TableSessionServiceImpl implements TableSessionService {
 
     @Override
     public TableSessionResponseDto getByCurrentParticipant() {
-        Participant current = requestContext.requireParticipant();
+        Participant current = tenantContext.requireParticipant();
+        log.debug("[TableSessionRepository] Calling findByParticipants for participantId={}", current.getPublicId());
         TableSession ts = tableSessionRepository.findByParticipantsContains(List.of(current))
                 .orElseThrow(() -> new EntityNotFoundException(PARTICIPANT));
         return tableSessionMapper.toDto(ts);
@@ -134,30 +131,39 @@ public class TableSessionServiceImpl implements TableSessionService {
 
     @Override
     public TableSession getEntityById(UUID sessionId) {
+        log.debug("[TableSessionRepository] Calling findByPublicId for sessionId={}", sessionId);
         return tableSessionRepository.findByPublicId(sessionId)
                 .orElseThrow(() -> new EntityNotFoundException(TABLE_SESSION, sessionId.toString()));
     }
 
     @Override
     public Page<TableSessionResponseDto> getByFoodVenueAndTable(UUID foodVenueId, Integer tableNumber, Pageable pageable) {
+        log.debug("[TableSessionRepository] Calling findByFoodVenueAndTableNumber for venueId={}, tableNumber={}",
+                foodVenueId, tableNumber);
         return tableSessionRepository.findByFoodVenuePublicIdAndDiningTableNumber(foodVenueId, tableNumber, pageable)
                 .map(tableSessionMapper::toDto);
     }
 
     @Override
     public Page<TableSessionResponseDto> getByContextAndTable(Integer tableNumber, Pageable pageable) {
-        UUID foodVenueId = requestContext.requireFoodVenue().getPublicId();
-        return tableSessionRepository.findByFoodVenuePublicIdAndDiningTableNumber(foodVenueId, tableNumber, pageable)
-                .map(tableSessionMapper::toDto);
+        UUID foodVenueId = tenantContext.requireFoodVenue().getPublicId();
+        return getByFoodVenueAndTable(foodVenueId, tableNumber, pageable);
     }
 
     @Override
-    public Page<TableSessionResponseDto> getByTableAndTimeRange(Integer tableNumber, LocalDateTime start, LocalDateTime end, Pageable pageable) {
+    public Page<TableSessionResponseDto> getByTableAndTimeRange(
+            Integer tableNumber,
+            LocalDateTime start,
+            LocalDateTime end,
+            Pageable pageable
+    ) {
         LocalDateTime effectiveEnd = (end == null) ? LocalDateTime.now() : end;
         if (start.isAfter(effectiveEnd)) {
             throw new IllegalArgumentException("Start date must be before or equal to end date");
         }
-        UUID foodVenueId = requestContext.requireFoodVenue().getPublicId();
+        UUID foodVenueId = tenantContext.requireFoodVenue().getPublicId();
+        log.debug("[TableSessionRepository] Calling findByFoodVenueAndTableAndTimeRange for venueId={}, " +
+                "tableNumber={}, range: {} to {}", foodVenueId, tableNumber, start, effectiveEnd);
         return tableSessionRepository
                 .findByFoodVenuePublicIdAndDiningTableNumberAndEndTimeGreaterThanEqualAndStartTimeLessThanEqual(
                         foodVenueId, tableNumber, start, effectiveEnd, pageable)
@@ -166,14 +172,17 @@ public class TableSessionServiceImpl implements TableSessionService {
 
     @Override
     public Page<TableSessionResponseDto> getActiveSessions(Pageable pageable) {
-        UUID foodVenueId = requestContext.requireFoodVenue().getPublicId();
+        UUID foodVenueId = tenantContext.requireFoodVenue().getPublicId();
+        log.debug("[TableSessionRepository] Calling findByFoodVenueAndEndTimeIsNull for venueId={}", foodVenueId);
         return tableSessionRepository.findByFoodVenuePublicIdAndEndTimeIsNull(foodVenueId, pageable)
                 .map(tableSessionMapper::toDto);
     }
 
     @Override
     public Page<TableSessionResponseDto> getByHostClient(UUID clientId, Pageable pageable) {
-        UUID foodVenueId = requestContext.requireFoodVenue().getPublicId();
+        UUID foodVenueId = tenantContext.requireFoodVenue().getPublicId();
+        log.debug("[TableSessionRepository] Calling findByFoodVenueAndSessionHost for venueId={}, clientId={}",
+                foodVenueId, clientId);
         return tableSessionRepository.findByFoodVenuePublicIdAndSessionHostPublicId(foodVenueId, clientId, pageable)
                 .map(tableSessionMapper::toDto);
     }
@@ -181,43 +190,44 @@ public class TableSessionServiceImpl implements TableSessionService {
     @Override
     public Page<TableSessionResponseDto> getByAuthUserHostClient(Pageable pageable) {
         // FIX: antes se usaba tableSessionId como "host"; debería ser el Participant host actual
-        UUID hostParticipantId = requestContext.requireParticipant().getPublicId();
-        UUID foodVenueId = requestContext.requireFoodVenue().getPublicId();
+        UUID hostParticipantId = tenantContext.requireParticipant().getPublicId();
+        UUID foodVenueId = tenantContext.requireFoodVenue().getPublicId();
+        log.debug("[TableSessionRepository] Calling findByFoodVenuePublicIdAndSessionHostPublicId for venueId={}, hostParticipantId={}", foodVenueId, hostParticipantId);
         return tableSessionRepository.findByFoodVenuePublicIdAndSessionHostPublicId(foodVenueId, hostParticipantId, pageable)
                 .map(tableSessionMapper::toDto);
     }
 
     @Override
     public Page<TableSessionResponseDto> getPastByParticipant(UUID participantId, Pageable pageable) {
-        UUID foodVenueId = requestContext.requireFoodVenue().getPublicId();
+        UUID foodVenueId = tenantContext.requireFoodVenue().getPublicId();
+        log.debug("[TableSessionRepository] Calling findPastSessionsByParticipant for venueId={}, participantId={}",
+                foodVenueId, participantId);
+
         return tableSessionRepository.findPastSessionsByParticipantIdAndDeletedFalse(foodVenueId, participantId, pageable)
                 .map(tableSessionMapper::toDto);
     }
 
     @Override
     public Page<TableSessionResponseDto> getPastByAuthUserParticipant(Pageable pageable) {
-        // FIX: usar el participant actual, no el user
-        UUID participantId = requestContext.requireParticipant().getPublicId();
-        UUID foodVenueId = requestContext.requireFoodVenue().getPublicId();
-        return tableSessionRepository.findPastSessionsByParticipantIdAndDeletedFalse(foodVenueId, participantId, pageable)
-                .map(tableSessionMapper::toDto);
+        UUID participantId = tenantContext.requireParticipant().getPublicId();
+        return getPastByParticipant(participantId, pageable);
     }
 
     @Override
     public TableSessionResponseDto getLatestByTable(UUID tableId) {
-        UUID foodVenueId = requestContext.requireFoodVenue().getPublicId();
-        TableSession ts = tableSessionRepository
-                .findTopByFoodVenuePublicIdAndDiningTablePublicIdOrderByStartTimeDesc(foodVenueId, tableId)
+        TableSession tableSession = getTableSessionActiveByTable(tableId)
                 .orElseThrow(() -> new EntityNotFoundException(TABLE_SESSION));
-        return tableSessionMapper.toDto(ts);
+        return tableSessionMapper.toDto(tableSession);
     }
 
     @Override
     public TableSessionResponseDto addClient(UUID sessionId, UUID clientId) {
-        TableSession ts = getEntityById(sessionId);
-        Participant p = participantService.getEntityById(clientId);
-        ts.getParticipants().add(p);
-        return tableSessionMapper.toDto(tableSessionRepository.save(ts));
+        TableSession tableSession = getEntityById(sessionId);
+        Participant participant = participantService.getEntityById(clientId);
+        tableSession.getParticipants().add(participant);
+        determineTableStatusPostSessionCreation(tableSession.getDiningTable(), tableSession);
+        log.debug("[TableSessionRepository] Calling save to add client to session {}", sessionId);
+        return tableSessionMapper.toDto(tableSessionRepository.save(tableSession));
     }
 
     // ===========================
@@ -225,8 +235,8 @@ public class TableSessionServiceImpl implements TableSessionService {
     // ===========================
     @Override
     public TableSessionResponseDto closeCurrentSession() {
-        Participant currentHost = requestContext.requireParticipant();
-        TableSession currentTs = requestContext.requireTableSession();
+        Participant currentHost = tenantContext.requireParticipant();
+        TableSession currentTs = tenantContext.requireTableSession();
         if (!currentTs.getSessionHost().getPublicId().equals(currentHost.getPublicId())) {
             throw new AccessDeniedException("Only the current host can end the session");
         }
@@ -235,22 +245,24 @@ public class TableSessionServiceImpl implements TableSessionService {
 
     @Override
     public TableSessionResponseDto closeSessionById(UUID tableId) {
-        TableSession ts = findActiveSessionByDiningTable(tableId);
-        return closeSession(ts);
+        TableSession tableSession = getTableSessionActiveByTable(tableId)
+                .orElseThrow(() -> new EntityNotFoundException(TABLE_SESSION));
+        return closeSession(tableSession);
     }
 
-    private TableSessionResponseDto closeSession(TableSession ts) {
-        List<Order> orders = ts.getOrders();
+    private TableSessionResponseDto closeSession(TableSession tableSession) {
+        List<Order> orders = tableSession.getOrders();
         boolean completedPayments = orders.stream()
                 .map(o -> o.getPayment().getStatus())
                 .allMatch(PaymentStatus.COMPLETED::equals);
         if (!completedPayments) {
             throw new InvalidPaymentStatusException("All payments must be paid to finish table session");
         }
-        ts.setEndTime(LocalDateTime.now());
-        diningTableService.updateStatus(DiningTableStatus.WAITING_RESET, ts.getDiningTable().getPublicId());
-        tableSessionRepository.save(ts);
-        return tableSessionMapper.toDto(ts);
+        tableSession.setEndTime(LocalDateTime.now());
+        diningTableService.updateStatus(DiningTableStatus.WAITING_RESET, tableSession.getDiningTable().getPublicId());
+        log.debug("[TableSessionRepository] Calling save to close session {}", tableSession.getPublicId());
+        tableSessionRepository.save(tableSession);
+        return tableSessionMapper.toDto(tableSession);
     }
 
     // ===========================
@@ -258,16 +270,18 @@ public class TableSessionServiceImpl implements TableSessionService {
     // ===========================
     private TableSession createNewSession(DiningTable table, FoodVenue venue) {
         log.debug("[TableSession] Creating new session for table={}", table.getPublicId());
-        TableSession ts = TableSession.builder()
+        TableSession tableSession = TableSession.builder()
                 .diningTable(table)
                 .foodVenue(venue)
                 .startTime(LocalDateTime.now())
                 .diningTable(table)
                 .build();
-        ts = tableSessionRepository.save(ts);
+        determineTableStatusPostSessionCreation(table, tableSession);
+        log.debug("[TableSessionRepository] Calling save to create new session for table {}", table.getPublicId());
+        tableSession = tableSessionRepository.save(tableSession);
 
-        // Primer participante define host si corresponde (se setea al unir participante)
-        return ts;
+        // Primer participante define host si corresponde (se carga al unir participante)
+        return tableSession;
     }
 
     private Participant findOrCreateParticipantForUser(TableSession ts, User user) {
@@ -284,6 +298,10 @@ public class TableSessionServiceImpl implements TableSessionService {
             ts.setSessionHost(p);
         }
         ts.getParticipants().add(p);
+        determineTableStatusPostSessionCreation(ts.getDiningTable(), ts);
+        log.debug("[TableSessionRepository] Calling save to update session {} after adding participant {}",
+                ts.getPublicId(), p.getPublicId());
+
         tableSessionRepository.save(ts);
         return p;
     }
@@ -301,6 +319,9 @@ public class TableSessionServiceImpl implements TableSessionService {
             ts.setSessionHost(p); // si es el primero, queda como host
         }
         ts.getParticipants().add(p);
+        determineTableStatusPostSessionCreation(ts.getDiningTable(), ts);
+        log.debug("[TableSessionRepository] Calling save to update session {} after adding guest participant {}",
+                ts.getPublicId(), p.getPublicId());
         tableSessionRepository.save(ts);
         return p;
     }
@@ -309,51 +330,57 @@ public class TableSessionServiceImpl implements TableSessionService {
         log.debug("[TableSession] Migrating guest {} to client {}", guest.getPublicId(), client.getPublicId());
         // Reasignar órdenes del guest al client
         ts.getOrders().stream()
-                .filter(o -> o.getParticipant() != null && Objects.equals(o.getParticipant().getId(), guest.getId()))
+                .filter(o -> o.getParticipant() != null && Objects.equals(o.getParticipant().getId(),
+                        guest.getId()))
                 .forEach(o -> o.setParticipant(client));
 
         // Remover guest de la sesión
         ts.getParticipants().remove(guest);
         participantService.softDelete(guest.getPublicId());
+        log.debug("[TableSessionRepository] Calling save to update session {} after guest migration", ts.getPublicId());
         tableSessionRepository.save(ts);
     }
 
-    private TableSession findActiveSessionByDiningTable(UUID tableId) {
+    private Optional<TableSession> getTableSessionActiveByTable(UUID tableId) {
+        log.debug("[TableSessionRepository] Calling findTableSessionActiveByTable for tableId={}", tableId);
         return tableSessionRepository
-                .findTableSessionByDiningTable_PublicIdAndDiningTableStatusAndEndTimeIsNull(tableId, DiningTableStatus.IN_SESSION)
-                .orElseThrow(() -> new EntityNotFoundException(TABLE_SESSION));
+                .findTableSessionByDiningTable_PublicIdAndDiningTableStatusAndEndTimeIsNull(
+                        tableId, DiningTableStatus.IN_SESSION);
     }
+
 
     /**
      * Devuelve la sesión activa del usuario (si existe), usando primero el contexto y luego la DB.
      */
     private TableSession findActiveSessionForUser(User user) {
         // 1) Si el token ya trae sesión activa
-        if (requestContext.tableSessionOpt().filter(ts -> ts.getEndTime() == null).isPresent()) {
-            return requestContext.tableSessionOpt().orElseThrow(() -> new EntityNotFoundException(TABLE_SESSION));
+        if (tenantContext.tableSessionOpt().filter(ts -> ts.getEndTime() == null).isPresent()) {
+            return tenantContext.tableSessionOpt().orElseThrow(() -> new EntityNotFoundException(TABLE_SESSION));
         }
-        // 2) Query por email (tu repo ya la tiene)
+        // 2) Query por email
+        log.debug("[TableSessionRepository] Calling findActiveSessionByUserEmail for user email={}", user.getEmail());
         return tableSessionRepository.findActiveSessionByUserEmailAndDeletedFalse(user.getEmail()).orElse(null);
     }
 
-    private AuthResponse signForParticipant(TableSession ts, Participant participant) {
-        // Armamos SessionInfo completa para el token
-        List<ParticipantResponseDto> participantsDto = ts.getParticipants().stream()
+    private AuthResponse signForParticipant(TableSession tableSession, Participant participant) {
+        // SessionInfo completa para el token
+        String role = participant.getRole().name();
+        List<ParticipantResponseDto> participantsDto = tableSession.getParticipants().stream()
                 .map(participantMapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
 
         SessionInfo si = SessionInfo.builder()
                 .userId(participant.getUser() != null ? participant.getUser().getPublicId() : null)
                 .subject(participant.getUser() != null ? participant.getUser().getEmail() : participant.getNickname())
-                .foodVenueId(ts.getFoodVenue().getPublicId())
+                .foodVenueId(tableSession.getFoodVenue().getPublicId())
                 .participantId(participant.getPublicId())
-                .tableSessionId(ts.getPublicId())
-                .role(RoleType.ROLE_CLIENT.name())
-                .startTime(ts.getStartTime())
-                .endTime(ts.getEndTime())
-                .hostClient(participantMapper.toResponseDto(ts.getSessionHost()))
+                .tableSessionId(tableSession.getPublicId())
+                .role(role)
+                .startTime(tableSession.getStartTime())
+                .endTime(tableSession.getEndTime())
+                .hostClient(participantMapper.toResponseDto(tableSession.getSessionHost()))
                 .participants(participantsDto)
-                .tableNumber(ts.getDiningTable().getNumber())
+                .tableNumber(tableSession.getDiningTable().getNumber())
                 .build();
 
         String access = jwtService.generateAccessToken(si);
@@ -369,5 +396,14 @@ public class TableSessionServiceImpl implements TableSessionService {
                 .hostClient(si.hostClient())
                 .numberOfParticipants(si.participants() != null ? si.participants().size() : null)
                 .build();
+    }
+
+    private void determineTableStatusPostSessionCreation(DiningTable diningTable, TableSession tableSession) {
+
+        if (diningTable.getCapacity().equals(tableSession.getParticipants().size())) {
+            diningTableService.updateStatus(DiningTableStatus.COMPLETE, diningTable.getPublicId());
+        } else {
+            diningTableService.updateStatus(DiningTableStatus.IN_SESSION, diningTable.getPublicId());
+        }
     }
 }
